[tool.poetry]
name = "my-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
lxml = "^5.3.0"
docker = "^7.1.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
rerun-sdk = "^0.18.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
