[project]
name = "my-python"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "lxml",
    "docker",
    "ipykernel",
    "matplotlib",
    "rerun-sdk",
    "scipy",
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.setuptools.packages.find]
where = ["tools"]
include = ["*"]
